--- a/main/src/core/MonoDevelop.Core/packages.config
+++ b/main/src/core/MonoDevelop.Core/packages.config
@@ -6,37 +6,37 @@
   <package id="ICSharpCode.Decompiler" version="3.2.0.3856" targetFramework="net471" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net461" />
   <package id="Microsoft.Build.MSBuildLocator" version="1.0.1-preview-g6cd9a57801" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis" version="2.10.0-beta2-63410-10" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis" version="2.11.0-beta3-63519-01" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net471" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Features" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.EditorFeatures" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="2.10.0-beta2-63410-10" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Features" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.EditorFeatures" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="2.11.0-beta3-63519-01" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Elfie" version="1.0.0-rc9" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Features" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Features" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.10.0-beta2-63410-10" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.10.0-beta2-63410-10" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Features" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Features" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.11.0-beta3-63519-01" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.11.0-beta3-63519-01" targetFramework="net461" />
   <package id="Microsoft.Composition" version="1.0.31" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.CodingConventions" version="1.1.20180503.2" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Composition" version="15.6.36" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Language" version="15.8.519" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Language.Intellisense" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Language.StandardClassification" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.8.519" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Language" version="16.0.142-g25b7188c54" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Language.Intellisense" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Language.StandardClassification" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="16.0.142-g25b7188c54" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Text.Implementation" version="15.2.3-pre" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Text.Internal" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.8.519" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.6.46" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.6.46" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Text.Internal" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="16.0.142-g25b7188c54" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.8.168" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.168" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.32" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net471" />
