--- a/main/msbuild/ReferencesRoslyn.props
+++ b/main/msbuild/ReferencesRoslyn.props
@@ -6,31 +6,31 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.CodeAnalysis">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Common.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Common.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.CSharp.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.CSharp.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp.EditorFeatures">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp.Features">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.Features.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.CSharp.Features.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.Features.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.CSharp.Features.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.Workspaces.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.CSharp.Workspaces.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.CSharp.Workspaces.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.CSharp.Workspaces.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.EditorFeatures">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.EditorFeatures.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.EditorFeatures.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.EditorFeatures.Text">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.Text.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.EditorFeatures.Text.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.Text.$(NuGetVersionRoslyn)\lib\net472\Microsoft.CodeAnalysis.EditorFeatures.Text.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.Elfie">
@@ -38,31 +38,31 @@
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.Features">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Features.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.Features.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Features.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.Features.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.VisualBasic">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.VisualBasic.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.VisualBasic.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.VisualBasic.Features">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.Features.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.VisualBasic.Features.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.Features.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.VisualBasic.Features.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.VisualBasic.EditorFeatures">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.VisualBasic.EditorFeatures.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.EditorFeatures.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.VisualBasic.EditorFeatures.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.Workspaces.$(NuGetVersionRoslyn)\lib\netstandard1.3\Microsoft.CodeAnalysis.VisualBasic.Workspaces.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.VisualBasic.Workspaces.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.VisualBasic.Workspaces.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.Workspaces">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Workspaces.Common.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.Workspaces.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Workspaces.Common.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.Workspaces.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis.Workspaces.Desktop">
-      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Workspaces.Common.$(NuGetVersionRoslyn)\lib\net46\Microsoft.CodeAnalysis.Workspaces.Desktop.dll</HintPath>
+      <HintPath>$(PackagesDirectory)\Microsoft.CodeAnalysis.Workspaces.Common.$(NuGetVersionRoslyn)\lib\netstandard2.0\Microsoft.CodeAnalysis.Workspaces.Desktop.dll</HintPath>
       <Private>$(ReferencesRoslynCopyToOutput)</Private>
     </Reference>
   </ItemGroup>
