--- a/main/src/core/MonoDevelop.Core/packages.config
+++ b/main/src/core/MonoDevelop.Core/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Features" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.EditorFeatures" version="2.11.0-beta3-63519-01" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.EditorFeatures.Common" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.EditorFeatures.Text" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Elfie" version="1.0.0-rc9" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Features" version="2.11.0-beta3-63519-01" targetFramework="net471" />
