--- a/main/src/addins/MonoDevelop.AssemblyBrowser/MonoDevelop.AssemblyBrowser.csproj
+++ b/main/src/addins/MonoDevelop.AssemblyBrowser/MonoDevelop.AssemblyBrowser.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="ICSharpCode.Decompiler">
-      <HintPath>..\..\..\packages\ICSharpCode.Decompiler.3.2.0.3856\lib\net46\ICSharpCode.Decompiler.dll</HintPath>
+      <HintPath>..\..\..\packages\ICSharpCode.Decompiler.4.0.0.4285-beta1\lib\net46\ICSharpCode.Decompiler.dll</HintPath>
       <Private>false</Private>
     </Reference>
     <Reference Include="System.Core" />
