--- a/main/src/core/MonoDevelop.Core/packages.config
+++ b/main/src/core/MonoDevelop.Core/packages.config
@@ -3,7 +3,7 @@
   <package id="ClrHeapAllocationAnalyzer" version="1.0.0.9" targetFramework="net471" />
   <package id="ErrorProne.NET.Structs" version="0.1.2" targetFramework="net471" developmentDependency="true" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net461" />
-  <package id="ICSharpCode.Decompiler" version="3.2.0.3856" targetFramework="net471" />
+  <package id="ICSharpCode.Decompiler" version="4.0.0.4285-beta1" targetFramework="net471" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net461" />
   <package id="Microsoft.Build.MSBuildLocator" version="1.0.1-preview-g6cd9a57801" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis" version="2.11.0-beta3-63519-01" targetFramework="net471" />
