--- a/main/src/core/MonoDevelop.Core/packages.config
+++ b/main/src/core/MonoDevelop.Core/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.11.0-beta3-63519-01" targetFramework="net471" />
   <package id="Microsoft.Composition" version="1.0.31" targetFramework="net461" />
+  <package id="Microsoft.DiaSymReader" version="1.3.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.CodingConventions" version="1.1.20180503.2" targetFramework="net461" />
